add portfolio section and images

--- a/index.html
+++ b/index.html
@@ -115,6 +115,73 @@
         </ul>
       </section>
       <!-- #endregion our team-->
+      <!-- #region our portfolio -->
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio/img-1.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            >
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-2.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            >
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-3.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            >
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-4.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            >
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-5.jpg"
+              alt="Design"
+              width="360"
+              height="300"
+            >
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-6.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            >
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </section>
+      <!-- #endregion our portfolio -->
     </main>
     <!-- #endregion main -->
     <!-- #region footer -->
