--- a/index.html
+++ b/index.html
@@ -3,24 +3,43 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webstudio</title>
+    <title>WebStudio</title>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    >
+    <!-- Custom styles -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.0/modern-normalize.min.css"
+      integrity="sha512-3axTZ/bKFZH5/qLFTl4U+mDbBDFW+5QO5L7D1HnOhlhJbcNDIVJxoNm6It77g0eUdzfKZlHirayqRC2qJaAOJw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    >
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <!-- #region header -->
     <header>
       <nav>
-        <a href="/">WebStudio</a>
-        <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+        <a href="/" class="logo">Web<span class="logo-dark">Studio</span></a>
+        <ul class="nav-list">
+          <li class="nav-link"><a href="#">Studio</a></li>
+          <li class="nav-link"><a href="#">Portfolio</a></li>
+          <li class="nav-link"><a href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="address-list">
+          <li class="address-link">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="address-link">
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
@@ -28,39 +47,39 @@
     <!-- #region main -->
     <main>
       <!-- #region hero-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
       <!-- #endregion hero-->
       <!-- #region features-->
-      <section>
-        <h2 hidden>Features</h2>
+      <section class="features">
+        <h2 class="feauture-title" hidden>Features</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="features-subtitle">Strategy</h3>
+            <p class="features-desc">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="features-subtitle">Punctuality</h3>
+            <p class="features-desc">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="features-subtitle">Diligence</h3>
+            <p class="features-desc">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="features-subtitle">Technologies</h3>
+            <p class="features-desc">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -69,115 +88,115 @@
       </section>
       <!-- #endregion features-->
       <!-- #region our team-->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
               src="./images/team/img-1.jpg"
               height="260"
               width="264"
               alt="Portrait of Mark Guerrero, Product Designer"
             >
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-subtitle">Mark Guerrero</h3>
+            <p class="team-desc">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/team/img-2.jpg"
               height="260"
               width="264"
               alt="Portrait of Tom Ford, Frontend Developer"
             >
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-subtitle">Tom Ford</h3>
+            <p class="team-desc">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/team/img-3.jpg"
               height="260"
               width="264"
               alt="Portrait of Camila Garcia, Marketing"
             >
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-subtitle">Camila Garcia</h3>
+            <p class="team-desc">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/team/img-4.jpg"
               height="260"
               width="264"
               alt="Portrait of Daniel Wilson, UI Designer"
             >
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-subtitle">Daniel Wilson</h3>
+            <p class="team-desc">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- #endregion our team-->
       <!-- #region our portfolio -->
-      <section>
-        <h2>Our Portfolio</h2>
-        <ul>
-          <li>
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
             <img
               src="./images/portfolio/img-1.jpg"
               alt="Banking App"
               width="360"
               height="300"
             >
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-subtitle">Banking App</h3>
+            <p class="portfolio-desc">App</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/portfolio/img-2.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
             >
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-subtitle">Cashless Payment</h3>
+            <p class="portfolio-desc">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/portfolio/img-3.jpg"
               alt="Meditation App"
               width="360"
               height="300"
             >
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-subtitle">Meditation App</h3>
+            <p class="portfolio-desc">App</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/portfolio/img-4.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
             >
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-subtitle">Taxi Service</h3>
+            <p class="portfolio-desc">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/portfolio/img-5.jpg"
               alt="Design"
               width="360"
               height="300"
             >
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+            <p class="portfolio-desc">Design</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/portfolio/img-6.jpg"
               alt="Online Courses"
               width="360"
               height="300"
             >
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-subtitle">Online Courses</h3>
+            <p class="portfolio-desc">Marketing</p>
           </li>
         </ul>
       </section>
@@ -186,8 +205,8 @@
     <!-- #endregion main -->
     <!-- #region footer -->
     <footer>
-      <a href="/">WebStudio</a>
-      <p>
+      <a href="/" class="logo">Web<span class="logo-light">Studio</span></a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
