--- a/index.html
+++ b/index.html
@@ -23,22 +23,34 @@
   </head>
   <body>
     <!-- #region header -->
-    <header>
-      <nav>
-        <a href="/" class="logo">Web<span class="logo-dark">Studio</span></a>
-        <ul class="nav-list">
-          <li class="nav-link"><a href="#">Studio</a></li>
-          <li class="nav-link"><a href="#">Portfolio</a></li>
-          <li class="nav-link"><a href="#">Contacts</a></li>
+    <header class="site-header">
+      <nav class="site-nav">
+        <a href="./index.html" class="site-logo"
+          >Web<span class="site-logo--dark">Studio</span></a
+        >
+        <ul class="site-nav__list">
+          <li class="site-nav__item">
+            <a href="" class="site-nav__link">Studio</a>
+          </li>
+          <li class="site-nav__item">
+            <a href="" class="site-nav__link">Portfolio</a>
+          </li>
+          <li class="site-nav__item">
+            <a href="" class="site-nav__link">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul class="address-list">
-          <li class="address-link">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address class="contact-info">
+        <ul class="contact-info__list">
+          <li class="contact-info__item">
+            <a href="mailto:info@devstudio.com" class="contact-info__link"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="address-link">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="contact-info__item">
+            <a href="tel:+110001111111" class="contact-info__link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -48,155 +60,155 @@
     <main>
       <!-- #region hero-->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <h1 class="hero__title">Effective Solutions for Your Business</h1>
+        <button class="hero__btn" type="button">Order Service</button>
       </section>
       <!-- #endregion hero-->
-      <!-- #region features-->
-      <section class="features">
-        <h2 class="feauture-title" hidden>Features</h2>
+      <!-- #region benefits-->
+      <section class="benefits">
+        <h2 class="benefits__title" hidden>Benefits</h2>
         <ul>
           <li>
-            <h3 class="features-subtitle">Strategy</h3>
-            <p class="features-desc">
+            <h3 class="benefits__subtitle">Strategy</h3>
+            <p class="benefits__desc">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="features-subtitle">Punctuality</h3>
-            <p class="features-desc">
+            <h3 class="benefits__subtitle">Punctuality</h3>
+            <p class="benefits__desc">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="features-subtitle">Diligence</h3>
-            <p class="features-desc">
+            <h3 class="benefits__subtitle">Diligence</h3>
+            <p class="benefits__desc">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="features-subtitle">Technologies</h3>
-            <p class="features-desc">
+            <h3 class="benefits__subtitle">Technologies</h3>
+            <p class="benefits__desc">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <!-- #endregion features-->
+      <!-- #endregion benefits-->
       <!-- #region our team-->
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
+        <h2 class="team__title">Our Team</h2>
+        <ul class="team__list">
+          <li class="team__item">
             <img
               src="./images/team/img-1.jpg"
               height="260"
               width="264"
               alt="Portrait of Mark Guerrero, Product Designer"
             >
-            <h3 class="team-subtitle">Mark Guerrero</h3>
-            <p class="team-desc">Product Designer</p>
+            <h3 class="team__subtitle">Mark Guerrero</h3>
+            <p class="team__desc">Product Designer</p>
           </li>
-          <li class="team-item">
+          <li class="team__item">
             <img
               src="./images/team/img-2.jpg"
               height="260"
               width="264"
               alt="Portrait of Tom Ford, Frontend Developer"
             >
-            <h3 class="team-subtitle">Tom Ford</h3>
-            <p class="team-desc">Frontend Developer</p>
+            <h3 class="team__subtitle">Tom Ford</h3>
+            <p class="team__desc">Frontend Developer</p>
           </li>
-          <li class="team-item">
+          <li class="team__item">
             <img
               src="./images/team/img-3.jpg"
               height="260"
               width="264"
               alt="Portrait of Camila Garcia, Marketing"
             >
-            <h3 class="team-subtitle">Camila Garcia</h3>
-            <p class="team-desc">Marketing</p>
+            <h3 class="team__subtitle">Camila Garcia</h3>
+            <p class="team__desc">Marketing</p>
           </li>
-          <li class="team-item">
+          <li class="team__item">
             <img
               src="./images/team/img-4.jpg"
               height="260"
               width="264"
               alt="Portrait of Daniel Wilson, UI Designer"
             >
-            <h3 class="team-subtitle">Daniel Wilson</h3>
-            <p class="team-desc">UI Designer</p>
+            <h3 class="team__subtitle">Daniel Wilson</h3>
+            <p class="team__desc">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- #endregion our team-->
       <!-- #region our portfolio -->
       <section class="portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
+        <h2 class="portfolio__title">Our Portfolio</h2>
+        <ul class="portfolio__list">
+          <li class="portfolio__item">
             <img
               src="./images/portfolio/img-1.jpg"
               alt="Banking App"
               width="360"
               height="300"
             >
-            <h3 class="portfolio-subtitle">Banking App</h3>
-            <p class="portfolio-desc">App</p>
+            <h3 class="portfolio__subtitle">Banking App</h3>
+            <p class="portfolio__desc">App</p>
           </li>
-          <li class="portfolio-item">
+          <li class="portfolio__item">
             <img
               src="./images/portfolio/img-2.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
             >
-            <h3 class="portfolio-subtitle">Cashless Payment</h3>
-            <p class="portfolio-desc">Marketing</p>
+            <h3 class="portfolio__subtitle">Cashless Payment</h3>
+            <p class="portfolio__desc">Marketing</p>
           </li>
-          <li class="portfolio-item">
+          <li class="portfolio__item">
             <img
               src="./images/portfolio/img-3.jpg"
               alt="Meditation App"
               width="360"
               height="300"
             >
-            <h3 class="portfolio-subtitle">Meditation App</h3>
-            <p class="portfolio-desc">App</p>
+            <h3 class="portfolio__subtitle">Meditation App</h3>
+            <p class="portfolio__desc">App</p>
           </li>
-          <li class="portfolio-item">
+          <li class="portfolio__item">
             <img
               src="./images/portfolio/img-4.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
             >
-            <h3 class="portfolio-subtitle">Taxi Service</h3>
-            <p class="portfolio-desc">Marketing</p>
+            <h3 class="portfolio__subtitle">Taxi Service</h3>
+            <p class="portfolio__desc">Marketing</p>
           </li>
-          <li class="portfolio-item">
+          <li class="portfolio__item">
             <img
               src="./images/portfolio/img-5.jpg"
               alt="Design"
               width="360"
               height="300"
             >
-            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
-            <p class="portfolio-desc">Design</p>
+            <h3 class="portfolio__subtitle">Screen Illustrations</h3>
+            <p class="portfolio__desc">Design</p>
           </li>
-          <li class="portfolio-item">
+          <li class="portfolio__item">
             <img
               src="./images/portfolio/img-6.jpg"
               alt="Online Courses"
               width="360"
               height="300"
             >
-            <h3 class="portfolio-subtitle">Online Courses</h3>
-            <p class="portfolio-desc">Marketing</p>
+            <h3 class="portfolio__subtitle">Online Courses</h3>
+            <p class="portfolio__desc">Marketing</p>
           </li>
         </ul>
       </section>
@@ -204,9 +216,11 @@
     </main>
     <!-- #endregion main -->
     <!-- #region footer -->
-    <footer>
-      <a href="/" class="logo">Web<span class="logo-light">Studio</span></a>
-      <p class="footer-text">
+    <footer class="site-footer">
+      <a href="./index.html" class="site-logo"
+        >Web<span class="site-logo--light">Studio</span></a
+      >
+      <p class="site-footer__text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
