add link and capitalize title

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         >
         <ul class="site-nav__list">
           <li class="site-nav__item">
-            <a href="" class="site-nav__link">Studio</a>
+            <a href="./index.html" class="site-nav__link">Studio</a>
           </li>
           <li class="site-nav__item">
             <a href="" class="site-nav__link">Portfolio</a>
